unpackaged/main/default/objects/cmbls__InterestAccrual__c/cmbls__InterestAccrual__c.object-meta.xml
<CustomObject>
    <label>Interest Accrual</label>
    <nameField>
        <displayFormat>Int-Accrual-{0000}</displayFormat>
        <label>Interest Accrual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Accruals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>