unpackaged/main/default/objects/cmbls__InterestAccrual__c/fields/cmbls__Repayment__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Repayment__c</fullName>
    <inlineHelpText>Related Repayment ID</inlineHelpText>
    <label>Repayment</label>
    <referenceTo>cmbls__Repayment__c</referenceTo>
    <relationshipLabel>Interest Accruals</relationshipLabel>
    <relationshipName>Interest_Accruals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>