unpackaged/main/default/objects/cmbls__InterestAccrual__c/fields/Migrated_Write_Off_or_Recovery_Loan__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Write_Off_or_Recovery_Loan__c</fullName>
    <formula>AND(
            cmbls__Repayment__r.Migrated__c,
			OR(
                ISPICKVAL(cmbls__Repayment__r.cmbls__Status__c, 'Write Off'),
				ISPICKVAL(cmbls__Repayment__r.cmbls__Status__c, 'Recovery')
            )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migrated Write Off or Recovery Loan</label>
    <type>Checkbox</type>
</CustomField>