unpackaged/main/default/objects/cmbls__InterestAccrual__c/fields/Posted_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Posted_to_Accounting__c</fullName>
    <label>Posted to Accounting</label>
    <type>Date</type>
</CustomField>