unpackaged/main/default/objects/cmbls__InterestAccrual__c/fields/Total_Interest_Accrued_for_Period_ABS__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Accrued_for_Period_ABS__c</fullName>
    <formula>ABS(cmbls__Total_Interest_Accrued_for_Period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Accrued for Period (ABS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>